--- a/.env.production
+++ b/.env.production
@@ -7,7 +7,7 @@ NODE_ENV=production
 VITE_APP_ENV=production
 
 # Site Configuration
-VITE_SITE_URL=https://vedicwisdomseries.com
+VITE_SITE_URL=https://vaidikwisdomseries.com
 VITE_APP_NAME=Vedic Wisdom Series
 
 # Authentication Configuration (Future Use)
@@ -28,14 +28,14 @@ VITE_ENABLE_STORAGE=false
 VITE_ENABLE_EDGE_FUNCTIONS=true
 
 # Contact Information (Update with Dr. Nagori's real details)
-VITE_CONTACT_EMAIL=contact@vedicwisdomseries.com
-VITE_SUPPORT_EMAIL=support@vedicwisdomseries.com
+VITE_CONTACT_EMAIL=contact@vaidikwisdomseries.com
+VITE_SUPPORT_EMAIL=support@vaidikwisdomseries.com
 VITE_WHATSAPP_NUMBER=+1-XXX-XXX-XXXX
 
 # Social Media (Update with real handles)
-VITE_YOUTUBE_CHANNEL=@vedicwisdomseries
-VITE_FACEBOOK_PAGE=vedicwisdomseries
-VITE_INSTAGRAM_HANDLE=vedicwisdomseries
+VITE_YOUTUBE_CHANNEL=@vaidikwisdomseries
+VITE_FACEBOOK_PAGE=vaidikwisdomseries
+VITE_INSTAGRAM_HANDLE=vaidikwisdomseries
 
 # Analytics (Future Configuration)
 # VITE_GA_MEASUREMENT_ID=G-XXXXXXXXXX
