--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
   ],
   "scripts": {
     "build:sitemap": "node scripts/build-sitemap-fixed.mjs",
+    "build:blog": "node scripts/build-blog-index.mjs",
     "dev": "npm run build:sitemap && vite",
-    "build": "npm run build:sitemap && tsc && vite build",
+    "build": "npm run build:blog && tsc && vite build",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --fix",
     "type-check": "tsc --noEmit",
