--- a/.env.production
+++ b/.env.production
@@ -27,10 +27,11 @@ VITE_ENABLE_REAL_TIME=false
 VITE_ENABLE_STORAGE=false
 VITE_ENABLE_EDGE_FUNCTIONS=true
 
-# Contact Information (Update with Dr. Nagori's real details)
+# Contact Information (Divine Launch Day - August 7, 2025)
 VITE_CONTACT_EMAIL=contact@vaidikwisdomseries.com
 VITE_SUPPORT_EMAIL=support@vaidikwisdomseries.com
-VITE_WHATSAPP_NUMBER=+1-XXX-XXX-XXXX
+VITE_PHONE_NUMBER=+91-961-000-1234
+VITE_WHATSAPP_NUMBER=+91-961-000-1234
 
 # Social Media (Update with real handles)
 VITE_YOUTUBE_CHANNEL=@vaidikwisdomseries
